[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/UI/hand.png" type="Texture" id=2]
[ext_resource path="res://IMPACT.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Player/SpeedrunTime.gd" type="Script" id=4]
[ext_resource path="res://Player/Message.gd" type="Script" id=5]
[ext_resource path="res://Textures/UI/speech.png" type="Texture" id=6]
[ext_resource path="res://UITheme.tres" type="Theme" id=7]
[ext_resource path="res://Player/PauseMenu.gd" type="Script" id=8]

[sub_resource type="CapsuleMesh" id=6]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Head Bob"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.15, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="InputEventKey" id=9]
pressed = true
scancode = 82

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 6 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 500.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera"]
root_node = NodePath("../../..")
"anims/Head Bob" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="InteractionRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = -2

[node name="UI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Crosshair" type="ColorRect" parent="UILayer/UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="Hand" type="TextureRect" parent="UILayer/UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 2 )

[node name="Speech" type="TextureRect" parent="UILayer/UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 6 )

[node name="SpeedrunTime" type="Label" parent="UILayer/UI"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "00 : 00 : 00 : 000"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Message" type="Label" parent="UILayer/UI"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 32.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 8 )
text = "gaming"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="MessageTimer" type="Timer" parent="UILayer/UI"]
wait_time = 3.0

[node name="PauseLayer" type="CanvasLayer" parent="UILayer"]
layer = 100

[node name="PauseMenu" type="Control" parent="UILayer/PauseLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="UILayer/PauseLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PauseLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -24.0
margin_right = 38.0
margin_bottom = 24.0

[node name="Resume" type="Button" parent="UILayer/PauseLayer/PauseMenu/VBoxContainer"]
pause_mode = 2
margin_right = 76.0
margin_bottom = 22.0
text = "Resume"

[node name="Reset" type="Button" parent="UILayer/PauseLayer/PauseMenu/VBoxContainer"]
margin_top = 26.0
margin_right = 76.0
margin_bottom = 48.0
shortcut = SubResource( 10 )
text = "Reset"

[node name="Quit" type="Button" parent="UILayer/PauseLayer/PauseMenu/VBoxContainer"]
pause_mode = 2
margin_top = 52.0
margin_right = 76.0
margin_bottom = 74.0
text = "Quit"

[connection signal="timeout" from="UILayer/UI/MessageTimer" to="UILayer/UI/Message" method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="UILayer/PauseLayer/PauseMenu/VBoxContainer/Resume" to="UILayer/PauseLayer/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="UILayer/PauseLayer/PauseMenu/VBoxContainer/Reset" to="UILayer/PauseLayer/PauseMenu" method="_on_Reset_pressed"]
[connection signal="pressed" from="UILayer/PauseLayer/PauseMenu/VBoxContainer/Quit" to="UILayer/PauseLayer/PauseMenu" method="_on_Quit_pressed"]
